# u-touch-edm

./: .env  .gitignore  Dockerfile  ENVIRONMENT_VARIABLES.md  PROGRESS_SAVE_ENHANCEMENT.md  README.md  README_scraper.md  SCRAPER_CHECKPOINT_GUIDE.md  cron_setup.md  crontab_config.txt  daily_report_cron.sh  daily_send_cron.sh  docker-compose.yml  docker-entrypoint.sh  email_report.py  email_send_history.json  excel_to_mysql.py  gai_rou_scraper.py  main.py  pyproject.toml  requirements.txt  run_scraper_demo.py  scraper.py  scraper_with_checkpoint.py  send_mail.py  test.py  test_colorful_output.py  test_db_connection.py  test_duplicate_check.py  test_fonts.py  test_name_normalization_only.py  test_pagination.py  test_scraper.py
.claude/: settings.local.json
sql/: edm.sql  init.sql  update-0609-1.sql  update-0609.sql  update-add-support-type.sql  update-add-website-field.sql  update-scraper-checkpoint.sql
